--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -107,11 +107,11 @@ aria-describedby="btnNavbarSearch" />
               <thead>
               <tr>
                 <th>STT</th>
-                <th>Tên</th>
-                <th>Mô tả</th>
+                <th>Tên sản phẩm</th>
+                <th>Thông số kỹ thuật</th>
                 <th>Giá</th>
                 <th>Tồn kho</th>
-                <th>image</th>
+                <th>Hình ảnh</th>
                 <th>Mã danh mục</th>
                 <th>Ngày tạo</th>
                 <th colspan="2">Chức năng</th>
@@ -121,7 +121,7 @@ aria-describedby="btnNavbarSearch" />
               <tr>
                 <th>STT</th>
                 <th>Tên</th>
-                <th>Mô tả</th>
+                <th>Thông số kỹ thuật</th>
                 <th>Giá</th>
                 <th>Tồn kho</th>
                 <th>image</th>
