--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -15,75 +15,75 @@
 
 <body class="sb-nav-fixed">
 <!-- <jsp:include page="../layout/header.jsp" /> -->
- 
+
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
   <!-- Navbar Brand-->
   <a class="navbar-brand ps-3" href="../dashboard/dashboard.html">GEAR.VN</a>
   <!-- Sidebar Toggle-->
   <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!">
-      <i class="fas fa-bars"></i>
+    <i class="fas fa-bars"></i>
   </button>
   <!-- Navbar Search-->
   <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-      <span style="color: white;">Welcome, USERNAME </span>
-      <!-- <div class="input-group">
+    <span style="color: white;">Welcome, USERNAME </span>
+    <!-- <div class="input-group">
 <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
 aria-describedby="btnNavbarSearch" />
 <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i
-  class="fas fa-search"></i></button>
+class="fas fa-search"></i></button>
 </div> -->
   </form>
   <!-- Navbar-->
   <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-      <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-             data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#!">Settings</a></li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+         data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="#!">Settings</a></li>
 
-              <li>
-                  <hr class="dropdown-divider" />
-              </li>
-              <li><a class="dropdown-item" href="?action=login">Logout</a></li>
-          </ul>
-      </li>
+        <li>
+          <hr class="dropdown-divider" />
+        </li>
+        <li><a class="dropdown-item" href="?action=login">Logout</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
 <div id="layoutSidenav">
   <!-- <jsp:include page="../layout/sidebar.jsp" /> -->
 
-<div id="layoutSidenav_nav">
-  <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-    <div class="sb-sidenav-menu">
-      <div class="nav">
-        <div class="sb-sidenav-menu-heading">Features</div>
-        <a class="nav-link" href="../dashboard/dashboard.html">
-          <div class="sb-nav-link-icon"><i class="fa-solid fa-house-laptop"></i></div>
-          TRANG CHỦ
-        </a>
+  <div id="layoutSidenav_nav">
+    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+      <div class="sb-sidenav-menu">
+        <div class="nav">
+          <div class="sb-sidenav-menu-heading">Features</div>
+          <a class="nav-link" href="../dashboard/dashboard.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-house-laptop"></i></div>
+            TRANG CHỦ
+          </a>
 
-        <a class="nav-link" href="../account/account.html">
-          <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
-          QUẢN LÝ ACCOUNT
-        </a>
+          <a class="nav-link" href="../account/account.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+            QUẢN LÝ ACCOUNT
+          </a>
 
-        <a class="nav-link" href="../user/show.html">
-          <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
-          QUẢN LÝ USERS
-        </a>
+          <a class="nav-link" href="../user/show.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
+            QUẢN LÝ USERS
+          </a>
 
-        <a class="nav-link" href="../product/product.html">
-          <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
-          QUẢN LÝ PRODUCT
-        </a>
-        <a class="nav-link" href="../orders/orders.html">
-          <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
-          DANH SÁCH HÓA ĐƠN
-        </a>
+          <a class="nav-link" href="../product/product.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+            QUẢN LÝ PRODUCT
+          </a>
+          <a class="nav-link" href="../orders/orders.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+            DANH SÁCH HÓA ĐƠN
+          </a>
+        </div>
       </div>
-    </div>
-  </nav>
-</div>
+    </nav>
+  </div>
 
   <div id="layoutSidenav_content">
     <main>
@@ -93,7 +93,8 @@ aria-describedby="btnNavbarSearch" />
           <li class="breadcrumb-item"><a href="../dashboard/dashboard.html">TRANG CHỦ</a></li>
           <li class="breadcrumb-item active">PRODUCT</li>
         </ol>
-        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#createUserModal">
+
+        <button type="button" class="btn btn-secondary" onclick="window.location.href='../product/creatProduct.html'">
           Thêm sản phẩm
         </button>
         <div class="card mb-4">
@@ -106,11 +107,11 @@ aria-describedby="btnNavbarSearch" />
               <thead>
               <tr>
                 <th>STT</th>
-                <th>Tên</th>
-                <th>Mô tả</th>
+                <th>Tên sản phẩm</th>
+                <th>Thông số kỹ thuật</th>
                 <th>Giá</th>
                 <th>Tồn kho</th>
-                <th>image</th>
+                <th>Hình ảnh</th>
                 <th>Mã danh mục</th>
                 <th>Ngày tạo</th>
                 <th colspan="2">Chức năng</th>
@@ -120,7 +121,7 @@ aria-describedby="btnNavbarSearch" />
               <tr>
                 <th>STT</th>
                 <th>Tên</th>
-                <th>Mô tả</th>
+                <th>Thông số kỹ thuật</th>
                 <th>Giá</th>
                 <th>Tồn kho</th>
                 <th>image</th>
@@ -281,49 +282,7 @@ aria-describedby="btnNavbarSearch" />
         </div>
       </div>
       <!-- Modal -->
-      <div class="modal fade" id="createUserModal" tabindex="-1" aria-labelledby="createUserModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="createUserModalLabel">Thêm sản phẩm</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form id="createUserForm" action="/your-server-endpoint" method="POST">
 
-                <div class="mb-3">
-                  <label for="email" class="form-label">Tên</label>
-                  <input type="text" class="form-control" id="email" name="email" required>
-                </div>
-
-                <div class="mb-3">
-                  <label for="username" class="form-label">Mô tả</label>
-                  <input type="text" class="form-control" id="username" name="username" required>
-                </div>
-
-                <div class="mb-3">
-                  <label for="price" class="form-label">Giá</label>
-                  <input type="text" class="form-control" id="price" name="price" required>
-                </div>
-                <div class="mb-3">
-                  <label for="stock" class="form-label">Tồn kho</label>
-                  <input type="text" class="form-control" id="stock" name="stock" required>
-                </div>
-                <div class="mb-3">
-                  <label for="image" class="form-label">Chọn ảnh</label>
-                  <input type="file" class="form-control" id="image" name="image" accept="image/*" required>
-                </div>
-                <div class="mb-3">
-                  <label for="category_id" class="form-label">Mã danh mục</label>
-                  <input type="text" class="form-control" id="category_id" name="category_id" required>
-                </div>
-
-                <button type="submit" class="btn btn-primary">Tạo mới</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!-- Toast thông báo thành công -->
       <div class="toast-container position-fixed top-0 end-0 p-3">
@@ -339,14 +298,14 @@ aria-describedby="btnNavbarSearch" />
       </div>
     </main>
     <!-- <jsp:include page="../layout/footer.jsp" /> -->
-     
-<footer class="py-4 bg-light mt-auto">
-  <div class="container-fluid px-4">
-    <div class="d-flex align-items-center justify-content-between small">
-      <div class="text-muted">Copyright &copy; CODEGYM.VN</div>
-    </div>
-  </div>
-</footer>
+
+    <footer class="py-4 bg-light mt-auto">
+      <div class="container-fluid px-4">
+        <div class="d-flex align-items-center justify-content-between small">
+          <div class="text-muted">Copyright &copy; CODEGYM.VN</div>
+        </div>
+      </div>
+    </footer>
 
   </div>
 </div>
@@ -357,7 +316,7 @@ aria-describedby="btnNavbarSearch" />
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-        <script src="/resources/js/datatables-simple-demo.js"></script>
+<script src="/resources/js/datatables-simple-demo.js"></script>
 <script>
 
   document.getElementById('createUserForm').addEventListener('submit', function(event) {
