--- a/view/admin/product/creatProduct.html
+++ b/view/admin/product/creatProduct.html
@@ -123,17 +123,8 @@
                     <li class="breadcrumb-item"><a href="../dashboard/dashboard.html">TRANG CHỦ</a></li>
                     <li class="breadcrumb-item active">PRODUCT</li>
                 </ol>
-
-
-                <html>
-                <head>
-                    <title></title>
-                    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-                          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-                </head>
-                <body>
                 <div class="container">
-                    <div method="post">
+                    <form method="post">
                         <div class="mb-3">
                             <label for="name" class="form-label">Tên sản phẩm </label>
                             <input type="text" class="form-control" id="name" name="name">
@@ -171,30 +162,38 @@
                         </div>
 
                         <div class="mb-3">
-                            <label class="form-label"> Thông số kỹ thuật</label>
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-6 form-label">Thông số kỹ thuật</label>
 
-                            <div class="div-info">
-                                <button id="btn-add-info" type="button" class="btn btn-primary mt-2">Thêm thông tin</button>
-                                <div class="info" >
-
-                                    <input type="textarea" class="form-control" name="name_info[]"  />
-                                    <input type="textarea" class="form-control" name="text_info[]"  />
-                                    <button type="button" class="btn btn-danger btn-sm btn-delete-info" data-num="${num}">Xóa</button>
+                                <div class="col-sm-4 col-6">
+                                    <button id="btn-add-info" type="button" class="btn btn-primary">Thêm thông tin</button>
                                 </div>
                             </div>
+
+                            <div class="div-info">
+                                <div class="col-12">
+                                    <div class="row align-items-center mb-sm-2 mb-4" id="info-1">
+                                        <div class="col-sm-5 col-12 mb-2 mb-sm-0">
+                                            <input type="text" class="form-control" name="name_info[]"  />
+                                        </div>
+                                        <div class="col-sm-6 col-12">
+                                            <textarea class="form-control" name="text_info[]"></textarea>
+                                        </div>
+                                        <!-- <div class="col-1">
+                                            <button type="button" class="btn btn-danger btn-sm btn-delete-info" data-num="1">Xóa</button>
+                                        </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <input type="hidden" name="num_info" id="num_info" value="1">
                         </div>
 
+                    </form>
+                    <div class="col-12 text-center">
+                        <button type="button" class="btn btn-primary" id="submit-btn" style="width: 210px;">Thêm mới</button>
                     </div>
-                    <button type="button" class="btn btn-primary" id="submit-btn">Thêm mới sản phẩm </button>
 
                 </div>
-
-
-                </body>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                        crossorigin="anonymous"></script>
-                </html>
             </div>
             <!-- Modal -->
 
@@ -230,13 +229,22 @@
     (function () {
         // Thêm thông tin chi tiết
         $(document).on("click", "#btn-add-info", function () {
-            var num = $(".info").length + 1;
+            var index = $("#num_info").val()
+            var num = index + 1;
             $(".div-info").append(
-                `<div class="info" id="info-${num}">
-                        <input type="textarea" class="form-control" name="name_info[]"  />
-                        <input type="textarea" class="form-control" name="text_info[]"  />
-                        <button type="button" class="btn btn-danger btn-sm btn-delete-info" data-num="${num}">Xóa</button>
-                    </div>`
+                `<div class="col-12 id="info-${num}">
+                    <div class="row align-items-center mb-sm-2 mb-4" id="info-1">
+                        <div class="col-sm-5 col-12 mb-2 mb-sm-0">
+                            <input type="text" class="form-control" name="name_info[]"  />
+                        </div>
+                        <div class="col-sm-6 col-12">
+                            <textarea class="form-control" name="text_info[]"></textarea>
+                        </div>
+                        <div class="col-1">
+                            <button type="button" class="btn btn-danger btn-sm btn-delete-info" data-num="${num}">Xóa</button>
+                        </div>
+                    </div>
+                </div>`
             );
         });
 
