--- a/view/admin/orders/orders.html
+++ b/view/admin/orders/orders.html
@@ -110,15 +110,6 @@
 
                             </tr>
                             </thead>
-                            <tfoot>
-                            <tr>
-                                <th>STT</th>
-                                <th>Tên Người Đặt</th>
-                                <th>Trạng thái</th>
-                                <th>Tổng giá trị đơn hàng</th>
-
-                            </tr>
-                            </tfoot>
                             <tbody>
                             <tr>
                                 <td>001</td> <!-- Ô chứa dữ liệu -->
@@ -196,13 +187,13 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="resources/js/scripts.js"></script>
+<script src="../../../resources/js/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
         crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-<script src="/resources/js/datatables-simple-demo.js"></script>
+<script src="../../../resources/js/datatables-simple-demo.js"></script>
 <script>
 
     document.getElementById('createUserForm').addEventListener('submit', function(event) {
