--- a/view/user/cart_step1.html
+++ b/view/user/cart_step1.html
@@ -331,7 +331,8 @@
                               <span class="font-20 text-danger-secondary" style="color:red "><b>Tổng tiền: xxx.xxx.000₫</b></span>
                             </div>
                             <div class="section-button col-12 mt-4">
-                              <button class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</button>
+                              <!-- <button class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</button> -->
+                              <a type="button" href="cart_step2.html" class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</a>
                             </div>
                           </div>
                   </form>
