--- a/view/user/cart_step4.html
+++ b/view/user/cart_step4.html
@@ -267,12 +267,12 @@
         <!-- Nút hành động -->
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <a href="/order-tracking" class="btn btn-outline-primary w-100 py-2 mb-2">
+                <a href="#" class="btn btn-outline-primary w-100 py-2 mb-2">
                     <i class="fa-solid fa-file-invoice me-2"></i> Xem chi tiết đơn hàng
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="/" class="btn btn-danger w-100 py-2">
+                <a href="dashboard.html" class="btn btn-danger w-100 py-2">
                     <i class="fa-solid fa-house me-2"></i> Quay về trang chủ
                 </a>
             </div>
