--- a/view/user/dashboard.html
+++ b/view/user/dashboard.html
@@ -117,7 +117,7 @@
                       <div class="header-action-item main-header--cart">
                           <div class="header-action_text">
                               <a class="header-action__link header-action_clicked" id="site-cart-handle"
-                                 href="#" aria-label="Giỏ hàng" title="Giỏ hàng">
+                                 href="cart_step1.html" aria-label="Giỏ hàng" title="Giỏ hàng">
                           <span class="box-icon">
                               <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M4.22111 3L3.84216 1H1M4.22111 3H19L15.2105 12.0455H5.73689M4.22111 3L5.73689 12.0455M5.73689 12.0455L3.56458 13.293C2.96774 13.923 3.5309 14.9091 4.375 14.9091H9.625H12.25L15.2105 15M15.2105 15C14.708 15 14.2261 15.2107 13.8708 15.5858C13.5154 15.9609 13.3158 16.4696 13.3158 17C13.3158 17.5304 13.5154 18.0391 13.8708 18.4142C14.2261 18.7893 14.708 19 15.2105 19C15.7131 19 16.195 18.7893 16.5503 18.4142C16.9056 18.0391 17.1053 17.5304 17.1053 17C17.1053 16.4696 16.9056 15.9609 16.5503 15.5858C16.195 15.2107 15.7131 15 15.2105 15ZM7.63162 17C7.63162 17.5304 7.432 18.0391 7.07667 18.4142C6.72134 18.7893 6.2394 19 5.73689 19C5.23438 19 4.75245 18.7893 4.39711 18.4142C4.04178 18.0391 3.84216 17.5304 3.84216 17C3.84216 16.4696 4.04178 15.9609 4.39711 15.5858C4.75245 15.2107 5.23438 15 5.73689 15C6.2394 15 6.72134 15.2107 7.07667 15.5858C7.432 15.9609 7.63162 16.4696 7.63162 17Z"
@@ -219,57 +219,57 @@
         <div class="d-lg-none d-xl-none">
           <ul class="list-submenu list-submenu--mobile">
             <li class="item-submenu sm-1">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Laptop</span>
               </a>
             </li>
             <li class="item-submenu sm-2">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Laptop Gaming</span>
               </a>
             </li>
             <li class="item-submenu sm-3">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">PC GVN</span>
               </a>
             </li>
             <li class="item-submenu sm-4">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Main, CPU, VGA</span>
               </a>
             </li>
             <li class="item-submenu sm-5">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Case, Nguồn, Tản</span>
               </a>
             </li>
             <li class="item-submenu sm-6">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Ổ cứng, RAM, Thẻ nhớ</span>
               </a>
             </li>
             <li class="item-submenu sm-7">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Loa, Micro, Webcam</span>
               </a>
             </li>
             <li class="item-submenu sm-8">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Màn hình</span>
               </a>
             </li>
             <li class="item-submenu sm-9">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Bàn phím</span>
               </a>
             </li>
             <li class="item-submenu sm-10">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Chuột + Lót chuột</span>
               </a>
             </li>
             <li class="item-submenu sm-11">
-              <a href="#">
+              <a href="list.html">
                 <span class="text">Tai Nghe</span>
               </a>
             </li>
@@ -309,8 +309,8 @@
               <div class="col-lg-3 d-none d-lg-block">
                 <div>
                   <ul>
-                    <li class="item-submenu sm-1">
-                      <a href="#">
+                    <li class="item-submenu sm-1 pe-auto">
+                      <a href="list.html">
                         <span class="sidebar-icon-left">
                           <i class="fa-solid fa-laptop"></i>
                         </span>
@@ -321,7 +321,7 @@
                       </a>
                     </li>
                     <li class="item-submenu sm-1">
-                      <a href="#">
+                      <a href="list.html">
                         <span class="sidebar-icon-left">
                           <i class="fa-solid fa-gamepad"></i>
                         </span>
@@ -332,7 +332,7 @@
                       </a>
                     </li>
                     <li class="item-submenu sm-1">
-                      <a href="#">
+                      <a href="list.html">
                         <span class="sidebar-icon-left">
                           <i class="fa-solid fa-desktop"></i>
                         </span>
@@ -343,7 +343,7 @@
                       </a>
                     </li>
                     <li class="item-submenu sm-1">
-                      <a href="#">
+                      <a href="list.html">
                         <span class="sidebar-icon-left">
                           <i class="fa-solid fa-desktop"></i>
                         </span>
@@ -354,7 +354,7 @@
                       </a>
                     </li>
                     <li class="item-submenu sm-1">
-                      <a href="#">
+                      <a href="list.html">
                         <span class="sidebar-icon-left">
                           <i class="fa-solid fa-desktop"></i>
                         </span>
@@ -564,6 +564,7 @@
                   <div class="section-body">
                       <div class="body-content">
                           <div class="col-lg-3 col-6 pb-4">
+                            <a href="productdetail.html" class="pe-auto">
                               <div class="pro-img">
                                   <img src="../../resources/images/20241230205000.png">
                               </div>
@@ -582,6 +583,7 @@
                                       <span class="count-rating">(0 đánh giá)</span>
                                   </div>
                               </div>
+                            </a>
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
