--- a/view/user/cart_step2.html
+++ b/view/user/cart_step2.html
@@ -322,7 +322,7 @@
           <br>
           <div class="col-sm-6">
               <span class="page-title m-0 font-14">
-                  <a href="/dashboard">
+                  <a href="cart_step1.html">
                       <button class="btn btn-danger">
                           <i class="fa-solid fa-arrow-left-long me-2"></i> Kiểm tra lại giỏ hàng
                       </button>
@@ -433,7 +433,8 @@
                   <span class="font-20 text-danger-secondary" style="color:red "><b>Tổng tiền: xxx.xxx.000₫</b></span>
                 </div>
                 <div class="section-button col-12 mt-4">
-                  <button class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</button>
+                  <!-- <button class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</button> -->
+                  <a type="button" href="cart_step3.html" class="btn btn-danger w-100 py-3">ĐẶT HÀNG NGAY</a>
                 </div>
               </div>
             </div>
