--- a/view/admin/account/myaccount.html
+++ b/view/admin/account/myaccount.html
@@ -79,6 +79,11 @@ aria-describedby="btnNavbarSearch" />
             <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
             QUẢN LÝ PRODUCT
           </a>
+          <a class="nav-link" href="../orders/orders.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+            DANH SÁCH HÓA ĐƠN
+          </a>
+  
         </div>
       </div>
     </nav>
