--- a/view/admin/dashboard/dashboard.html
+++ b/view/admin/dashboard/dashboard.html
@@ -87,7 +87,6 @@ aria-describedby="btnNavbarSearch" />
           DANH SÁCH HÓA ĐƠN
         </a>
 
-
       </div>
     </div>
   </nav>
@@ -143,18 +142,30 @@ aria-describedby="btnNavbarSearch" />
               </div>
             </div>
           </div>
-            <div class="col-xl-6 col-md-6">
+          <div class="col-xl-6 col-md-6">
                 <div class="card text-bg-light text-back mb-4">
                     <div class="card-body" >
                         <i class="fa-solid fa-gears"></i>
                         MY ACCOUNT</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-back stretched-link" href="../account/myaccount.html">Chi tiết</a>
-
                         <div class="small text-back"><i class="fas fa-angle-right"></i></div>
-                    </div>
-                </div>
-      </div>
+                     </div>
+                 </div>
+           </div>
+           <div class="col-xl-6 col-md-6">
+            <div class="card text-bg-light text-back mb-4">
+                <div class="card-body" >
+                  <i class="fa-solid fa-pen"></i>
+                    ĐĂNG KÍ TÀI KHOẢN ADMIN<small style="color: red; font-style: italic">    (Bạn được quyền đăng kí tài khoản admin)</small>
+                  </div>
+                <div class="card-footer d-flex align-items-center justify-content-between">
+                    <a class="small text-back stretched-link" href="../register/register.html">Chi tiết</a>
+                    <div class="small text-back"><i class="fas fa-angle-right"></i></div>
+                 </div>
+             </div>
+           </div>
+    </div>
     </main>
     <!-- <jsp:include page="../layout/footer.jsp" /> -->
     <footer class="py-4 bg-light mt-auto">
