--- a/view/admin/orders/orders.html
+++ b/view/admin/orders/orders.html
@@ -61,7 +61,10 @@
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-house-laptop"></i></div>
                         TRANG CHỦ
                     </a>
-
+                    <a class="nav-link" href="../account/myaccount.html">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-gears"></i></div>
+                        MY ACCOUNT
+                      </a>
                     <a class="nav-link" href="../account/account.html">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
                         QUẢN LÝ ACCOUNT
