--- a/view/admin/dashboard/dashboard.html
+++ b/view/admin/dashboard/dashboard.html
@@ -146,7 +146,8 @@ aria-describedby="btnNavbarSearch" />
                 <div class="card text-bg-light text-back mb-4">
                     <div class="card-body" >
                         <i class="fa-solid fa-gears"></i>
-                        MY ACCOUNT</div>
+                        MY ACCOUNT <small style="color: red; font-style: italic">  (ADMIN MASTER OR ADMIN)</small>
+                      </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-back stretched-link" href="../account/myaccount.html">Chi tiết</a>
                         <div class="small text-back"><i class="fas fa-angle-right"></i></div>
@@ -157,7 +158,7 @@ aria-describedby="btnNavbarSearch" />
             <div class="card text-bg-light text-back mb-4">
                 <div class="card-body" >
                   <i class="fa-solid fa-pen"></i>
-                    ĐĂNG KÍ TÀI KHOẢN ADMIN<small style="color: red; font-style: italic">    (Bạn được quyền đăng kí tài khoản admin)</small>
+                    ĐĂNG KÍ TÀI KHOẢN ADMIN <small style="color: red; font-style: italic">    (Bạn được quyền đăng kí tài khoản admin)</small>
                   </div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-back stretched-link" href="../register/register.html">Chi tiết</a>
